unpackaged/main/default/objects/SDO_Community_Related_Idea__c/SDO_Community_Related_Idea__c.object-meta.xml
<CustomObject>
    <description>What: Ideas object used in communities</description>
    <label>Related Idea</label>
    <nameField>
        <label>Related Idea</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>