unpackaged/main/default/objects/SDO_Community_Related_Idea__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <label>Posted</label>
    <type>Date</type>
</CustomField>