unpackaged/main/default/objects/SDO_Community_Related_Idea__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <label>Posted By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>