unpackaged/main/default/objects/SDO_Community_Related_Idea__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SDO_Community_Ideas_Projects__c</referenceTo>
    <relationshipName>R00N8a00000BTyLWEA1</relationshipName>
    <type>Lookup</type>
</CustomField>